# mcp-hsm

./: .gitignore  README.md  README_en.md  README_zh.md  hsm.py  main.py  mcp_client.py  pyproject.toml  server.py  test_rand_gen.py  test_sm2_gen_sign_verify.py  test_sm4_encrypt.py
.roo/: mcp.json
hsm/: hsm.py
printdata/: __init__.py  printdata.py
src/: test_rand_gen.py  test_sm2_gen_sign_verify.py  test_sm4_encrypt.py
src/hsm/: __init__.py  hsm.py  hsm_utils.py  sdf.h  server.py  sm2.py  symm.py
src/printdata/: printdata.py
src/test/: test_hsm.py  test_sign.py
src/tools/: __init__.py  hsm_tools.py
test/: test_hsm.py
tools/: __init__.py  server.py
